--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,4 @@
-/*Desde aca comienza el footer*/
+/*footer*/
 
 .container-body {
   display: flex;
@@ -98,9 +98,6 @@
 footer {
   background: #161718;
 }
-
-/*Fin Footer*/
-/**/ /**/
 
 .colum-b {
   color: #000;
