--- a/css/parallax.css
+++ b/css/parallax.css
@@ -1,3 +1,5 @@
+/*parallax*/
+
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +12,7 @@ body {
 .parallax-completo {
   width: 100%;
   height: 100vh;
-  background-image: url("../hero.jpg");
+  background-image: url("../img/wall-1801952_1920.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
