--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
+/*estilos en general*/
+:root{
+  --fuente-primaria: font-family: 'Roboto', sans-serif;
+  --color-primario: #17202a;
+}
+
 * {
   margin: 0;
   padding: 0;
 }
+
+body{
+  font-family: var(--fuente-primaria);
+  font-family: 'Roboto', sans-serif;
+}
+
